# viscope

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: docs.yml
binder/: apt.txt  binder.py  postBuild  requirements.txt  start  viscope-demo.desktop
docs/: architecture.md  class_hierarchy.md  examples.md  extensions.md  hooks.py  index.md  installation.md
tests/: test_allBaseInstrument.py  test_class.py  test_component.py  test_gui.py  test_instrument.py  test_instrument2.py  test_sample.py  test_virtualInstrument.py  test_virtualMicroscope.py
viscope/: __init__.py  main.py
viscope/gui/: aDetectorGUI.py  aDetectorViewGUI.py  allDeviceGUI.py  baseGUI.py  cameraGUI.py  cameraView2GUI.py  cameraViewGUI.py  filterchangerGUI.py  histogramGUI.py  laserGUI.py  napariGUI.py  pumpGUI.py  saveImageGUI.py  stageGUI.py  switchGUI.py
viscope/gui/napariViewer/: napariViewer.py
viscope/gui/window/: viewerWindow.py
viscope/instrument/: aDetectorProcessor.py
viscope/instrument/base/: baseADetector.py  baseCamera.py  baseDetector.py  baseFilterChanger.py  baseInstrument.py  baseLaser.py  baseProcessor.py  basePump.py  baseSLM.py  baseSequencer.py  baseStage.py  baseSwitch.py
viscope/instrument/virtual/: virtualADetector.py  virtualCamera.py  virtualDetector.py  virtualFilterChanger.py  virtualLaser.py  virtualPump.py  (+3 more)
viscope/main/: baseMain.py
viscope/virtualDevice/: baseVirtualMicroscope.py  virtualMicroscope.py  virtualMicroscope2.py
viscope/virtualSystem/: simpleMicroscope.py  twoCameraMicroscope.py
(+5 files in other folders)
